compiler/tests/sct-checker/fail/bug_1179.jazz
export
fn main() {
  stack u64 s;
  reg u64 x = 0;
  if false {
    x = s;
  }
  [ x ] = 0;
}
